fixed location jump links alignment

--- a/wp-content/themes/lamadeleine-catering/style.css
+++ b/wp-content/themes/lamadeleine-catering/style.css
@@ -1051,4 +1051,6 @@ li.nav_download {
 		margin: 0;
 	}
 	#menu #order-dates p {margin-top:20px;}
+
+	#jump_links a {display: block; border: 0px; margin-bottom: 8px;}
 }
